# resilient-aging

./: .gitignore  PLAYBOOK.md  README.md  pyproject.toml  resilient_t2d_cohort.csv  test_synthetic.db
resilient_aging/: __init__.py  cli.py  concept_sets.py  database.py  omop_schema.py  prevalence.py  resilient_ager.py  synthetic_data.py
tests/: test_resilient_aging.py
